small viewport fix, button overflow

--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ label {
     flex-direction: column;
     align-items: center;
     /* justify-content: space-evenly */
-    height: 100vh;
+    height: 120vh;
 }
 
 #about > h1 {
